Properly track virtual path remapping during incremental compilation
When the `rust-src` component is installed, rustc will automatically
remap paths from the standard library to point into the local system.
The target filesystem location is stored in
`tcx.sess.real_rust_source_base_dir`

This is a form of global state that's not tracked by the incremental
compilation system, which can lead to ICEs when the `rust-src` component
is added or removed between compilation sessions.

This PR fixes several bugs in incremental compilation
* We now hash `real_rust_source_base_dir` when computing a crate hash,
  since it affects any spans that we import from foreign crates (e.g.
  via macros or inlining).
* The `crate_hash` and `host_crate_hash` quereis now return a wrapper
  around `Svh`, which also hashes the value of
  `real_rust_source_base_dir` in the *current* compilation session.
  This reflects the fact that changes to this value affect how we decode
  values from all foreign crates.
* We now properly re-compute the `name_hash` of an imported `SourceFile`
  when we remap a path.

There was a test for this kind of issue, but it was broken when the
standard library was moved to `library/std`, and was no longer actually
testing anything. To ensure that this doesn't happen again, I've
modified the test to build a binary that outputs a remapped standard
library path (via a panic), and verifies that the precense of `rust-src`
during compilation correctly affects the output of the compiled binary.

--- a/src/test/run-make-fulldeps/incr-add-rust-src-component/Makefile
+++ b/src/test/run-make-fulldeps/incr-add-rust-src-component/Makefile
@@ -25,6 +25,13 @@ INCR=$(TMPDIR)/incr
 # prefix, then loop on the next prefix. This way, we basically create a copy of
 # the context around root/lib/rustlib/src, and can freely add/remove the src
 # component itself.
+#
+# Normally, path remapping only occured when the compiler was build with
+# `remap-debuginfo=true` in the `config.toml`.
+# We don't do this on CI, and it would be very wasteful to rebuild the entire
+# compiler for a single test. Instead, we use the `-Z force-virtual-source-base` option,
+# which makes the compiler act as though it was built with debuginfo remapped to the
+# specified directory.
 all:
 	mkdir $(FAKEROOT)
 	ln -s $(SYSROOT)/* $(FAKEROOT)
@@ -38,7 +45,11 @@ all:
 	mkdir $(FAKEROOT)/lib/rustlib/src
 	ln -s $(SYSROOT)/lib/rustlib/src/* $(FAKEROOT)/lib/rustlib/src
 	rm -f $(FAKEROOT)/lib/rustlib/src/rust
-	$(RUSTC) --sysroot $(FAKEROOT) -C incremental=$(INCR) main.rs
-	mkdir -p $(FAKEROOT)/lib/rustlib/src/rust/src/libstd
-	touch $(FAKEROOT)/lib/rustlib/src/rust/src/libstd/lib.rs
-	$(RUSTC) --sysroot $(FAKEROOT) -C incremental=$(INCR) main.rs
+	$(RUSTC) --sysroot $(FAKEROOT) -C incremental=$(INCR) -Z force-virtual-source-base=$(S)/library main.rs
+	# Run the compiled binary, and check for a non-remapped path in the panic message
+	$(call RUN,main) 2>&1 | grep $(S)/library/core/src/sync/atomic.rs
+	mkdir -p $(FAKEROOT)/lib/rustlib/src/rust/library/std/src/
+	touch $(FAKEROOT)/lib/rustlib/src/rust/library/std/src/lib.rs
+	$(RUSTC) --sysroot $(FAKEROOT) -C incremental=$(INCR) -Z force-virtual-source-base=$(S)/library main.rs
+	# Run the newly compiled binary, and check that the path in the panic message is now remapped
+	$(call RUN,main) 2>&1 | grep $(FAKEROOT)/lib/rustlib/src/rust/library/core/src/sync/atomic.rs
