--- a/.travis.yml
+++ b/.travis.yml
@@ -42,29 +42,28 @@ matrix:
       env: RUSTFLAGS=-Ctarget-feature=+avx512vl
 
     # WebAssembly (wasm-bindgen)
-    - name: "wasm32-unknown-unknown (node, firefox, chrome)"
+    - name: "wasm32-unknown-unknown (firefox)"
       os: linux
       arch: amd64
       addons:
-        firefox: latest
-        chrome: stable
+        firefox: latest-nightly
       install:
         - curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
       script:
-        - wasm-pack test --node --firefox --chrome --headless crates/core_simd
-        - wasm-pack test --node --firefox --chrome --headless crates/core_simd --release
+        - wasm-pack test --firefox --headless crates/core_simd
+        - wasm-pack test --firefox --headless crates/core_simd --release
 
-    - name: "wasm32-unknown-unknown+simd128 (chrome)"
+    - name: "wasm32-unknown-unknown+simd128 (firefox)"
       os: linux
       arch: amd64
       addons:
-        chrome: stable
+        firefox: latest-nightly
       install:
         - curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
       script:
         - export RUSTFLAGS="-C target-feature=+simd128"
-        - wasm-pack test --chrome --headless crates/core_simd
-        - wasm-pack test --chrome --headless crates/core_simd --release
+        - wasm-pack test --firefox --headless crates/core_simd
+        - wasm-pack test --firefox --headless crates/core_simd --release
 
 script:
   - echo "## Requested target configuration (RUSTFLAGS=$RUSTFLAGS)"
