--- a/.travis.yml
+++ b/.travis.yml
@@ -53,17 +53,18 @@ matrix:
         - wasm-pack test --firefox --headless crates/core_simd
         - wasm-pack test --firefox --headless crates/core_simd --release
 
-    - name: "wasm32-unknown-unknown+simd128 (firefox)"
-      os: linux
-      arch: amd64
-      addons:
-        firefox: latest-nightly
-      install:
-        - curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
-      script:
-        - export RUSTFLAGS="-C target-feature=+simd128"
-        - wasm-pack test --firefox --headless crates/core_simd
-        - wasm-pack test --firefox --headless crates/core_simd --release
+    # FIXME: See https://github.com/rust-lang/stdsimd/issues/92
+    # - name: "wasm32-unknown-unknown+simd128 (firefox)"
+    #   os: linux
+    #   arch: amd64
+    #   addons:
+    #     firefox: latest-nightly
+    #   install:
+    #     - curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
+    #   script:
+    #     - export RUSTFLAGS="-C target-feature=+simd128"
+    #     - wasm-pack test --firefox --headless crates/core_simd
+    #     - wasm-pack test --firefox --headless crates/core_simd --release
 
 script:
   - echo "## Requested target configuration (RUSTFLAGS=$RUSTFLAGS)"
