--- a/compiler/rustc_codegen_cranelift/Cargo.toml
+++ b/compiler/rustc_codegen_cranelift/Cargo.toml
@@ -37,7 +37,7 @@ smallvec = "1.6.1"
 #gimli = { path = "../" }
 
 [features]
-default = ["jit", "inline_asm"]
+default = ["inline_asm"]
 jit = ["cranelift-jit", "libloading"]
 inline_asm = []
 
