--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,5 @@ debug = 0 # Set this to 1 or 2 to get more useful backtraces in debugger.
 # chalk-recursive = { path = "../chalk/chalk-recursive" }
 
 # ungrammar = { path = "../ungrammar" }
+
+# salsa = { path = "../salsa" }
