--- a/crates/profile/Cargo.toml
+++ b/crates/profile/Cargo.toml
@@ -15,14 +15,14 @@ cfg-if = "1"
 libc = "0.2.73"
 la-arena = { version = "0.2.0", path = "../../lib/arena" }
 countme = { version = "2.0.1", features = ["enable"] }
-jemalloc-ctl = { version = "0.3.3", optional = true }
+tikv-jemalloc-ctl = { version = "0.4.1", optional = true }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 perf-event = "0.4"
 
 [features]
 cpu_profiler = []
-jemalloc = ["jemalloc-ctl"]
+jemalloc = ["tikv-jemalloc-ctl"]
 
 # Uncomment to enable for the whole crate graph
 # default = [ "cpu_profiler" ]
