Allow viewing the crate graph in a webview

--- a/editors/code/package.json
+++ b/editors/code/package.json
@@ -110,6 +110,11 @@
                 "category": "Rust Analyzer"
             },
             {
+                "command": "rust-analyzer.viewCrateGraph",
+                "title": "View Crate Graph",
+                "category": "Rust Analyzer"
+            },
+            {
                 "command": "rust-analyzer.expandMacro",
                 "title": "Expand macro recursively",
                 "category": "Rust Analyzer"
