--- a/editors/code/package.json
+++ b/editors/code/package.json
@@ -613,6 +613,11 @@
                         "type": "string"
                     }
                 },
+                "rust-analyzer.highlighting.strings": {
+                    "markdownDescription": "Use semantic tokens for strings.\n\nIn some editors (e.g. vscode) semantic tokens override other highlighting grammars.\nBy disabling semantic tokens for strings, other grammars can be used to highlight\ntheir contents.",
+                    "default": true,
+                    "type": "boolean"
+                },
                 "rust-analyzer.hoverActions.debug": {
                     "markdownDescription": "Whether to show `Debug` action. Only applies when\n`#rust-analyzer.hoverActions.enable#` is set.",
                     "default": true,
@@ -777,11 +782,6 @@
                     "items": {
                         "type": "string"
                     }
-                },
-                "rust-analyzer.semanticStringTokens": {
-                    "markdownDescription": "Use semantic tokens for strings.\n\nIn some editors (e.g. vscode) semantic tokens override other highlighting grammars.\nBy disabling semantic tokens for strings, other grammars can be used to highlight\ntheir contents.",
-                    "default": true,
-                    "type": "boolean"
                 },
                 "$generated-end": false
             }
