Enable LLVM 12 on CI

--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        llvm: ["7",  "8", "9", "10", "11"]
+        llvm: ["7",  "8", "9", "10", "11", "12"]
         build: ["Release", "Debug"] # "RelWithDebInfo"
         os: [self-hosted]
     timeout-minutes: 120 
