[WIP] Native library linking changes for crater testing
- Enable `-Zpacked-bundled-libs` by default
- Preserve order of `-l` options from upstream crates, including dynamic libraries

--- a/src/test/run-make-fulldeps/invalid-staticlib/Makefile
+++ b/src/test/run-make-fulldeps/invalid-staticlib/Makefile
@@ -1,5 +1,7 @@
+# Staticlib format is no longer checked during bundling
+
 include ../tools.mk
 
 all:
 	touch $(TMPDIR)/libfoo.a
-	echo | $(RUSTC) - --crate-type=rlib -lstatic=foo 2>&1 | $(CGREP) "failed to add native library"
+	$(RUSTC) lib.rs --crate-type=rlib -lstatic=foo
