Actually fix 64bit cblas (#898)

--- a/enzyme/BCLoad/CMakeLists.txt
+++ b/enzyme/BCLoad/CMakeLists.txt
@@ -23,6 +23,20 @@ ExternalProject_Add(gsl
 )
 set_target_properties(gsl PROPERTIES EXCLUDE_FROM_ALL TRUE)
 
+ExternalProject_Add(gsl64
+    GIT_REPOSITORY https://github.com/EnzymeAD/gsl
+    GIT_TAG 5805b8323f75834c121fd65464cc55f2828f5b05
+    PREFIX gsl64
+    BUILD_IN_SOURCE 1
+    INSTALL_DIR ${CMAKE_CURRENT_BINARY_DIR}/gsl64/install
+    CONFIGURE_COMMAND sh -c ${CMAKE_CURRENT_SOURCE_DIR}/fixgsl64.sh
+    BUILD_COMMAND  sh -c "$<TARGET_FILE:clang> cblas/*.c ${BC_LOAD_FLAGS} -I . -I .. -S -emit-llvm -O1"
+    INSTALL_COMMAND ""
+    UPDATE_COMMAND ""
+    TEST_COMMAND      ""
+)
+set_target_properties(gsl64 PROPERTIES EXCLUDE_FROM_ALL TRUE)
+
 
 ExternalProject_Add(openblas
     GIT_REPOSITORY https://github.com/xianyi/OpenBLAS
@@ -52,7 +66,7 @@ ExternalProject_Add(fblas
 )
 set_target_properties(fblas PROPERTIES EXCLUDE_FROM_ALL TRUE)
 
-add_custom_target(blasheaders cp "${CMAKE_CURRENT_SOURCE_DIR}/makeblas.cmake" "${CMAKE_CURRENT_BINARY_DIR}/gsl/CMakeLists.txt" && cd "${CMAKE_CURRENT_BINARY_DIR}/gsl" && ${CMAKE_COMMAND} . DEPENDS gsl fblas ${CMAKE_CURRENT_SOURCE_DIR}/makeblas.cmake)
+add_custom_target(blasheaders cp "${CMAKE_CURRENT_SOURCE_DIR}/makeblas.cmake" "${CMAKE_CURRENT_BINARY_DIR}/gsl/CMakeLists.txt" && cd "${CMAKE_CURRENT_BINARY_DIR}/gsl" && ${CMAKE_COMMAND} . DEPENDS gsl gsl64 fblas ${CMAKE_CURRENT_SOURCE_DIR}/makeblas.cmake)
 set_target_properties(blasheaders PROPERTIES EXCLUDE_FROM_ALL TRUE)
 endif()
 
