ci: Fix Windows build (install mingw toolchain)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
     needs: build-libc
     strategy:
       matrix:
-        os: [self-hosted-ubuntu, macos-12, windows-latest]
+        os: [self-hosted-ubuntu, macos-12, windows-2019]
     runs-on: ${{ matrix.os }}
     steps:
 
@@ -201,9 +201,13 @@ jobs:
 
       # Windows
 
+      - name: Set up MinGW
+        uses: egor-tensin/setup-mingw@v2
+        if: matrix.os == 'windows-2019'
+
       - name: Build (Windows)
         shell: bash
-        if: matrix.os == 'windows-latest'
+        if: matrix.os == 'windows-2019'
         # TODO: remove once Windows is validated!
         continue-on-error: true
         env:
@@ -219,7 +223,7 @@ jobs:
 
       - name: Archive build output (Windows)
         uses: actions/upload-artifact@v3
-        if: matrix.os == 'windows-latest'
+        if: matrix.os == 'windows-2019'
         with:
           name: rust-toolchain-x86_64-pc-windows-msvc
           path: |
