--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
     "rust-analyzer.imports.granularity.enforce": true,
     "rust-analyzer.imports.granularity.group": "module",
     "rust-analyzer.imports.prefix": "crate",
-    "rust-analyzer.cargo.features": ["unstable-features"],
+    "rust-analyzer.cargo.features": ["unstable-features", "__check_build_system_using_ra"],
     "rust-analyzer.linkedProjects": [
         "./Cargo.toml",
         {
@@ -32,12 +32,6 @@
         {
             "sysroot_src": "./build_sysroot/sysroot_src/library",
             "crates": [
-                {
-                    "root_module": "./y.rs",
-                    "edition": "2021",
-                    "deps": [],
-                    "cfg": [],
-                },
                 {
                     "root_module": "./example/std_example.rs",
                     "edition": "2015",
