Add `ignore-cross-compile` to the `#[bench]` smoketest, and move it back to run-make

--- a/src/test/run-make/test-benches/Makefile
+++ b/src/test/run-make/test-benches/Makefile
@@ -1,4 +1,6 @@
-include ../tools.mk
+include ../../run-make-fulldeps/tools.mk
+
+# ignore-cross-compile
 
 all:
 	# Smoke-test that `#[bench]` isn't entirely broken.
