Nest Cargo.lock under Cargo.toml in Code

--- a/editors/code/package.json
+++ b/editors/code/package.json
@@ -1276,6 +1276,11 @@
                 "$generated-end": {}
             }
         },
+        "configurationDefaults": {
+            "explorer.fileNesting.patterns": {
+                "Cargo.toml": "Cargo.lock"
+            }
+        },
         "problemPatterns": [
             {
                 "name": "rustc",
